sm8250-common: overlay: Enable RR(refresh rate) settings
* Under Display Section

Co-authored-by: yograjfire18 <yograjfire18@gmail.com>

--- a/overlay/packages/apps/Settings/res/values/config.xml
+++ b/overlay/packages/apps/Settings/res/values/config.xml
@@ -29,4 +29,7 @@
          here. If this settings supports only 2 levels, for example, then the default intensity
          should be either LOW (1) or HIGH (3).
     -->
+
+    <!-- Whether to show min/max refresh rate in display settings -->
+    <bool name="config_show_refresh_rate_controls">true</bool>
 </resources>
