--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -312,8 +312,8 @@
     <string name="db_wal_sync_mode" translatable="false">OFF</string>
 
     <!-- Whether the device enable the standalone (SA) mode of 5G NR.-->
-    <bool name="config_telephony5gStandalone">true</bool>
+    <bool name="config_telephony5gStandalone">false</bool>
 
     <!-- Whether the device enable the non-standalone (NSA) mode of 5G NR.-->
-    <bool name="config_telephony5gNonStandalone">true</bool>
+    <bool name="config_telephony5gNonStandalone">false</bool>
 </resources>
